Update
Things done:

--> Add the endpoint of get games by name

--> Update the documentation with the new endpoint created
