# API/Infernum-API/app/Http/Controllers/GameController.php
@@ -6,6 +6,7 @@ use App\Models\Game;
 use App\Http\Resources\GameResource;
 use App\Http\Resources\GameListResource;
 
+use Illuminate\Http\Request;
 use Illuminate\Http\JsonResponse;
 
 use OpenApi\Attributes as OA;
@@ -117,5 +118,74 @@ class GameController extends Controller
         ]);
     }
     
+    #[OA\Get(
+        path: '/v1/games/name',
+        operationId: 'searchByName',
+        tags: ['Game'],
+        summary: 'Obtener juego por nombre',
+        parameters: [
+            new OA\Parameter(
+                name: 'term',
+                in: 'path',
+                required: true,
+                schema: new OA\Schema(type: 'string', example: 'Dark Souls')
+            )
+        ],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Juegos obtenidos',
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: 'status', type: 'string', example: 'Succesfull'),
+                        new OA\Property(property: 'game', ref: '#/components/schemas/GameListResource'),
+                        new OA\Property(
+                            property: 'pagination',
+                            type: 'object',
+                            properties: [
+                                new OA\Property(property: 'current_page', type: 'integer', example: 1),
+                                new OA\Property(property: 'total', type: 'integer', example: 1),
+                                new OA\Property(property: 'per_page', type: 'integer', example: 10),
+                                new OA\Property(property: 'last_page', type: 'integer', example: 1),
+                                new OA\Property(property: 'from', type: 'integer', example: 1),
+                                new OA\Property(property: 'to', type: 'integer', example: 1),
+                                new OA\Property(property: 'has_next_page', type: 'boolean', example: false),
+                                new OA\Property(property: 'next_page', type: 'string', example: 'http://next_page'),
+                                new OA\Property(property: 'previous_page', type: 'string', example: 'http://previous_page')
+                            ]
+                        )
+                    ]
+                )
+            ),
+            new OA\Response(
+                response: 404,
+                description: 'Juego no encontrado'
+            )
+        ]
+    )]
+    public function searchByName(Request $request): JsonResponse
+    {
+        $term = $request->query('term');
+        $games = Game::with(['images', 'discounts'])->where('name', 'LIKE', "%{$term}%")->paginate()->withQueryString();
+        
+        if ($games->isEmpty())
+            return response()->json(['status' => 'Error: Game not found'], 404);
+      
+        return response()->json([
+            'status' => 'Succesfull',
+            'game' => GameListResource::collection($games),
+            'pagination' => [
+                'current_page' => $games->currentPage(),
+                'total' => $games->total(),
+                'per_page' => $games->perPage(),
+                'last_page' => $games->lastPage(),
+                'from' => $games->firstItem(),
+                'to' => $games->lastItem(),
+                'has_more_page' => $games->hasMorePages(),
+                'next_page' => $games->nextPageUrl(),
+                'previous_page' => $games->previousPageUrl()
+            ]
+        ], 200);
+    }
 
 }
